# deepagent

./: .env.example  .gitignore  README.md  batch1_report.json  batch2_report.json  continuous_pipeline.py  docker_test_report.json  docker_verification_batch1.json  docker_verification_batch2.json  full_complexity_report.json  pyproject.toml  repair_docker_test.json  repair_full_test.json  repair_test.json  results.json  results_agent.json  results_final.json  revalidation_full_with_repair.json  test_report.json
deepagent/: .env.example  .gitignore  README.md  pyproject.toml
deepagent/datasets/deepagent_v1/: PRODUCT_README.md  PROVENANCE.md  e2e_drip.jsonl  gate_audit_summary.json  ledger_summary.json  (+5 more)
deepagent/docs/: PRODUCT_HARDNESS.md  architecture.md
deepagent/scripts/: _rehydrate_seed_materials.py  eval_realpr_panel_soft.py  m27_offline_floor_bite.py  m27c_smoke_dual.py  m27c_smoke_wk.py  m28b_dual_smoke2.py  m28b_finalize_n8.py  m28b_finalize_n9_packaging.py  m28b_fresh_wave.py  m28b_launch_retry.sh  m28b_live_densify.py  m28b_retry_smoke_gen.py  m28b_side_cert_click.py  m28b_side_cert_marshmallow2733.py  m28b_side_cert_packaging1267.py  m28b_side_densify.py  m28b_write_coverage_stats.py
deepagent/tests/: test_accounting.py  test_allowlist_m8.py  test_archive_hybrid.py  test_archive_seed5.py  test_candidates_ledger.py  test_cli.py  test_config.py  test_curate_prod_hard.py  test_deepagent_cert.py  test_deepagent_cli.py  test_deepswe_style_prompts.py  test_discover.py  test_easy_detect.py  test_envbuild.py  test_envbuild_clone_sha.py  test_envbuild_integration.py  test_envbuild_real_sha.py  test_eval_deepagent.py  test_full_realpr_agent_prompts.py  test_funnel_hardening.py  test_gate_audit_product.py  test_gh_archive_discover.py  test_git_mine.py  test_github_proxy.py  test_green_flake_policy.py  test_harbor.py  test_harbor_export_rpack.py  test_harbor_labeling.py  test_harbor_oracle_integration.py  test_harbor_producers.py  test_harbor_real_pack.py  test_hard_filter.py  test_hardness_floors.py  test_harness.py  test_harness_integration.py  test_hf_packs.py  test_host_suite_isolation.py  test_hybrid_multifile_floor.py  test_image_tags.py  test_intrinsic_difficulty.py  (+22 more)
(+1768 files in other folders)
